--- a/requirements.txt
+++ b/requirements.txt
@@ -1,276 +1,16 @@
-absl-py==0.7.0
-appdirs==1.4.3
-APScheduler==3.5.1
-apturl==0.5.2
-arrow==0.13.1
-asn1crypto==0.24.0
-astor==0.7.1
-atomicwrites==1.3.0
-attrs==18.2.0
-Automat==0.7.0
-beautifulsoup4==4.6.0
-binaryornot==0.4.4
-bleach==3.1.0
-blinker==1.4
-boto3==1.9.102
-botocore==1.12.102
-Brlapi==0.6.6
-certifi==2018.1.18
-chardet==3.0.4
+alembic==1.0.11
 Click==7.0
-cloudpickle==0.6.1
-colorclass==2.2.0
-coloredlogs==10.0
-colorhash==1.0.2
-command-not-found==0.3
-ConfigArgParse==0.13.0
-constantly==15.1.0
-cookiecutter==1.6.0
-cryptography==2.1.4
-cupshelpers==1.0
-cycler==0.10.0
-cymem==2.0.2
-cytoolz==0.9.0.1
-dask==1.1.4
-decorator==4.3.2
-defer==1.0.6
-defusedxml==0.5.0
-devscripts===2.17.12ubuntu1.1
-dill==0.2.9
-distro-info===0.18ubuntu0.18.04.1
-docopt==0.6.2
-docutils==0.14
-dominate==2.3.5
-ecdsa==0.13
-en-core-web-sm==2.0.0
-entrypoints==0.3
-esptool==2.6
-fakeredis==0.10.3
-fbmessenger==5.4.0
-feedparser==5.2.1
-Flask==1.0.2
-Flask-Cors==3.0.4
-Flask-JWT-Simple==0.0.3
-future==0.16.0
-gajim==1.0.1
-gast==0.2.2
-gevent==1.2.2
-gperf==0.2
-greenlet==0.4.15
-grpcio==1.18.0
-h5py==2.7.1
-html5lib==0.999999999
-httplib2==0.9.2
-humanfriendly==4.18
-hyperlink==18.0.0
-idna==2.6
-incremental==17.5.0
-iotop==0.6
-ipydatawidgets==4.0.0
-ipykernel==5.1.0
-ipython==5.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
+coverage==4.5.3
+Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.0
 itsdangerous==1.1.0
-Jinja2==2.10
-jinja2-time==0.2.0
-jmespath==0.9.4
-jsonpickle==0.9.6
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-Keras==2.1.6
-Keras-Applications==1.0.6
-Keras-Preprocessing==1.0.5
-keyring==10.6.0
-keyrings.alt==3.0
-Kivy==1.9.1
-kiwisolver==1.0.1
-klein==17.10.0
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-louis==3.5.0
-lxml==4.2.1
-macaroonbakery==1.1.3
-Mako==1.0.7
-Markdown==3.0.1
-MarkupSafe==1.0
-matplotlib==2.2.3
-mattermostwrapper==2.1
-meld==3.18.0
-mistune==0.8.4
-more-itertools==6.0.0
-mote==0.0.4
-msgpack==0.5.6
-msgpack-numpy==0.4.3.2
-murmurhash==1.0.2
-nbconvert==5.4.0
-nbformat==4.4.0
-nbxmpp==0.6.4
-netifaces==0.10.4
-networkx==2.1
-nose==1.3.7
-notebook==5.7.4
-numexpr==2.6.4
-numpy==1.15.4
-oauth==1.0.1
-oauthlib==2.0.6
-olefile==0.45.1
-onboard==1.4.1
-opencv-python==4.0.0.21
-openshot-qt==2.4.1
-packaging==17.1
-panda3d==1.10.0
-pandas==0.24.1
-pandocfilters==1.4.2
-pathlib==1.0.1
-pexpect==4.2.1
-pickleshare==0.7.4
-pika==0.11.2
-Pillow==5.1.0
-plac==0.9.6
-pluggy==0.9.0
-poyo==0.4.2
-precis-i18n==1.0.0
-preshed==2.0.1
-projectq==0.4.2
-prometheus-client==0.5.0
-prompt-toolkit==1.0.14
-protobuf==3.6.1
-ptyprocess==0.6.0
-py==1.8.0
-pyaes==1.6.1
-pyasn1==0.4.2
-pybind11==2.2.4
-pycairo==1.16.2
-pycrypto==2.6.1
-pycuda==2017.1.1
-pycups==1.9.73
-pydot==1.4.1
-Pygments==2.2.0
-pygobject==3.26.1
-PyHamcrest==1.9.0
-PyInquirer==1.0.3
-PyJWT==1.5.3
-pykwalify==1.6.0
-pymacaroons==0.13.0
-pymongo==3.5.1
-PyNaCl==1.1.2
-pyo==0.9.3
-pyOpenSSL==17.5.0
-pyparsing==2.3.1
-pyRFC3339==1.0
-pyserial==3.4
-PySocks==1.6.8
-pytest==4.3.1
-python-apt==1.6.4
-python-axolotl==0.1.39
-python-axolotl-curve25519==0.1
-python-crfsuite==0.9.6
-python-dateutil==2.7.3
-python-debian==0.1.32
-python-engineio==3.4.3
-python-gnupg==0.4.1
-python-socketio==2.1.2
-python-telegram-bot==10.1.0
-pythreejs==2.0.2
-pytools==2017.6
-pytz==2018.4
-PyWavelets==1.0.2
-pyxattr==0.6.0
-pyxdg==0.25
-PyYAML==3.12
-pyzmq==17.1.2
-QDarkStyle==2.6.5
-qrcode==5.3
-qtconsole==4.4.3
-questionary==1.0.2
-rasa-core==0.12.4
-rasa-core-sdk==0.12.2
-rasa-nlu==0.13.8
-redis==2.10.6
-regex==2018.1.10
-reportlab==3.4.0
-requests==2.21.0
-requests-toolbelt==0.9.1
-requests-unixsocket==0.1.5
-rocketchat-API==0.6.27
-ruamel.yaml==0.15.37
-s3transfer==0.2.0
-scikit-image==0.14.2
-scikit-learn==0.19.1
-scipy==1.2.1
-scour==0.36
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-selenium==3.141.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-simplejson==3.13.2
-six==1.11.0
-sklearn-crfsuite==0.3.6
-slackclient==1.3.0
-spacy==2.0.18
-ssh-import-id==5.7
-system-service==0.3
-systemd-python==234
-tables==3.4.2
-tabulate==0.8.3
-tensorboard==1.10.0
-tensorflow==1.10.0
-termcolor==1.1.0
-terminado==0.8.1
-terminaltables==3.1.0
-testpath==0.4.2
-Theano==1.0.4+10.g9feed7868
-thinc==6.12.1
-toolz==0.9.0
-torch==1.0.1.post2
-torchvision==0.2.2.post3
-tornado==5.1.1
-tqdm==4.23.3
-traitlets==4.3.2
-traittypes==0.2.1
-twilio==6.24.1
-Twisted==18.9.0
-typing==3.6.4
-tzlocal==1.5.1
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-ujson==1.35
-unattended-upgrades==0.1
-unidiff==0.5.4
-unity-scope-calculator==0.1
-unity-scope-chromiumbookmarks==0.1
-unity-scope-colourlovers==0.1
-unity-scope-devhelp==0.1
-unity-scope-firefoxbookmarks==0.1
-unity-scope-manpages==0.1
-unity-scope-openclipart==0.1
-unity-scope-texdoc==0.1
-unity-scope-tomboy==0.1
-unity-scope-virtualbox==0.1
-unity-scope-yelp==0.1
-unity-scope-zotero==0.1
-unity-tweak-tool==0.0.7
-urllib3==1.22
-usb-creator==0.3.3
-virtualenv==15.1.0
-wadllib==1.3.2
-wcwidth==0.1.7
-webencodings==0.5
-webexteamssdk==1.1.1
-websocket-client==0.55.0
-Werkzeug==0.14.1
-whichcraft==0.5.2
-widgetsnbextension==3.4.2
-wrapt==1.10.11
-wxPython==4.0.4
-xdiagnose==3.8.8
-xkit==0.0.0
-youtube-dl==2018.3.14
-zope.interface==4.6.0
+Jinja2==2.10.1
+Mako==1.0.14
+MarkupSafe==1.1.1
+python-dateutil==2.8.0
+python-editor==1.0.4
+six==1.12.0
+SQLAlchemy==1.3.6
+Werkzeug==0.15.5
